--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fullcalendar/daygrid": "^5.11.3",
+    "@fullcalendar/interaction": "^5.11.3",
+    "@fullcalendar/react": "^5.11.3",
+    "@fullcalendar/resource-timeline": "^5.11.3",
+    "@fullcalendar/timegrid": "^5.11.3",
     "@mui/material": "^5.10.15",
     "@mui/x-date-pickers": "^5.0.8",
     "@testing-library/jest-dom": "^5.16.2",
